# AutoApply

./: .gitignore  README.md  pyproject.toml
config/: .env.example  companies.yaml  filters.yaml  search_profiles.yaml  settings.yaml
data/profile/: schema.yaml
design-system/autoapply/: MASTER.md  README.md
docs/: CHANGELOG.md  DECISIONS.md  DEPLOYMENT.md  DEPLOYMENT_zh.md  PROJECT_MANAGEMENT.md  plan_en.md  plan_zh.md
frontend/: index.html  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js  router.js  styles.css  tokens.css
migrations/: env.py
migrations/versions/: 0412f55aac77_initial_tables_jobs_applications_.py  b2f9f1c5d3a4_add_missing_tracking_columns.py
src/agent/: __init__.py
src/application/: __init__.py  jobs.py  profile.py  search_profiles.py  settings.py  tracking.py
src/cli/: __init__.py  cmd_apply.py  cmd_eval.py  cmd_init.py  cmd_search.py  cmd_status.py  cmd_web.py  main.py  output.py
src/core/: config.py  database.py  models.py  state_machine.py
src/documents/: docx_engine.py  file_manager.py  latex_engine.py  page_count.py  pdf_converter.py  templates.py
src/execution/: __init__.py  browser.py  file_uploader.py  form_filler.py
src/generation/: __init__.py  evidence.py  (+7 more)
tests/: test_agent_eval.py  test_agent_gate.py  test_agent_loop.py  test_agent_tools.py  test_agent_trace.py  test_cli.py  test_documents.py  test_execution.py  test_filters.py  test_generation.py  test_linkedin.py  test_linkedin_smoke.py  test_llm.py  test_matching.py  test_memory.py  test_web.py
(+197 files in other folders)
